<resources>
    <string name="app_name">chat app</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">PassWord</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="forget_password">Forget PassWord</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="online">Online</string>
</resources>